WIP singapore stop slides

--- a/74-mdr-asia-2019/css/theme/source/jing.scss
+++ b/74-mdr-asia-2019/css/theme/source/jing.scss
@@ -70,19 +70,20 @@ html {
   }
 
   .j-stamp {
-    position: absolute;
-    top: -50%;
-    left: 50%;
-    transform: rotate(-30deg) translateX(-50%);
-    background-color: #000;
-    padding: 0.25em;
-    border: 0.15em solid #a70000;
-    color: #a70000;
-    text-shadow: 1px 1px 2px black;
-    box-shadow: 1px 1px 2px black;
+    color: red;
+    background: white;
+    border: 4px solid red;
     border-radius: 0.5em;
-    text-transform: uppercase;
-    font-size: 200%;
+    width: max-content;
+    display: flex;
+    align-items: center;
+    gap: 0.25em;
+    margin: 0 auto;
+    padding: 0 0.25em;
+    position: absolute;
+    top: 30%;
+    transform: rotate(-30deg);
+    left: 25%;
   }
 
   em,
@@ -295,4 +296,121 @@ span[role=img][aria-label]:hover::after {
 .intro-grid div {
   grid-row: 2 / -3;
   grid-column: 1 / -1;
+}
+
+// Singlish-o-meter ------------------------------
+.singlish-o-meter {
+  position: relative;
+  margin-top: 2em;
+
+  hr {
+    border: none;
+    height: 0.25em;
+    width: 100%;
+    background-color: $linkColor;
+    position: absolute;
+    top: 80%;
+  }
+}
+
+.singlish-o-meter::before {
+  content: url('../../img/singlish.jpg');
+  position: absolute;
+  left: 0;
+  z-index: 1;
+}
+
+.singlish-o-meter::after {
+  content: url('../../img/english.jpg');
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  background: transparent; /* Otherwise white in Chrome */
+  margin-top: 200px;
+  position: relative;
+  z-index: 1;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+
+  /* Hides the slider so custom styles can be added */
+  background: transparent; 
+  border-color: transparent;
+  color: transparent;
+}
+
+/* Special styling for WebKit/Blink */
+input[type=range]::-webkit-slider-thumb {
+  background-image: url('../../img/slider-thumb.png');
+  height: 400px;
+  width: 203px;
+  cursor: pointer;
+  margin-top: -200px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+}
+
+/* All the same stuff for Firefox */
+input[type=range]::-moz-range-thumb {
+  background-image: url('../../img/slider-thumb.png');
+  height: 400px;
+  width: 203px;
+  cursor: pointer;
+}
+
+/* All the same stuff for IE */
+input[type=range]::-ms-thumb {
+  background-image: url('../../img/slider-thumb.png');
+  height: 400px;
+  width: 203px;
+  cursor: pointer;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 1em;
+  cursor: pointer;
+}
+
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 1em;
+  cursor: pointer;
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 1em;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+
+// Singlish definition ------------------------------
+.definition {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0;
+  width: 15em;
+  background-color: black;
+  border: 3px solid white;
+  border-radius: 0.25em;
+  padding: 0 0.25em;
+  font-size: 85%;
 }
